@@ -29,7 +29,8 @@ Rectangle {
 
 //    property int cursor_size: 24
     property string document_font: "Helvetica"
-    property bool document_font_flag: false
+    property string selected_font: ""//存放用户选择确认后的字体
+//    property bool document_font_flag: false
     property string actiontitle: qsTr("Document font settings")//文档字体设置
     property string actiontext: qsTr("According to your preferences set document fonts, click 'default settings' button, can revert the corresponding font to the default font.")//根据您的喜好设置文档字体，通过“使用默认设置”按钮，可以将对应的字体恢复到优客助手启动时的默认字体。
     //背景
@@ -39,8 +40,9 @@ Rectangle {
     }
 
     Component.onCompleted: {
-        documentfontpage.document_font_flag = false;
+//        documentfontpage.document_font_flag = false;
         documentfontpage.document_font = sessiondispatcher.get_document_font_qt();
+        documentfontpage.selected_font = documentfontpage.document_font;
         //将系统初始的当前文档字体写入QSetting配置文件
         sessiondispatcher.write_default_configure_to_qsetting_file("font", "documentfont", documentfontpage.document_font);
     }
@@ -50,12 +52,14 @@ Rectangle {
         target: sessiondispatcher
         onNotifyFontStyleToQML: {
             if (font_style == "documentfont") {
-                documentfontpage.document_font_flag = true;
+//                documentfontpage.document_font_flag = true;
                 docufont.text = sessiondispatcher.get_document_font_qt();
+                documentfontpage.selected_font = docufont.text;
             }
             else if (font_style == "documentfont_default") {
-                documentfontpage.document_font_flag = false;
+//                documentfontpage.document_font_flag = false;
                 docufont.text = sessiondispatcher.get_document_font_qt();
+                documentfontpage.selected_font = docufont.text;
             }
         }
     }
@@ -172,14 +176,17 @@ Rectangle {
             width: 105
             height: 30
             onClicked: {
-                if(documentfontpage.document_font_flag == true) {
-                    sessiondispatcher.set_document_font_qt_default(documentfontpage.document_font);
-                    sessiondispatcher.restore_default_font_signal("documentfont_default");
-                    statusImage.visible = true;
-                }
-                else {
+                //Sans 11
+                var defaultfont = sessiondispatcher.read_default_configure_from_qsetting_file("font", "documentfont");
+                if(defaultfont == documentfontpage.selected_font) {
                     //友情提示：      您系统的当前文档字体已经为默认字体！
                     sessiondispatcher.showWarningDialog(qsTr("Tips:"),qsTr("Your system's current document font is the default!"), mainwindow.pos.x, mainwindow.pos.y);
+                }
+                else {
+                    sessiondispatcher.set_document_font_qt_default(defaultfont);
+                    documentfontpage.selected_font = defaultfont;
+                    sessiondispatcher.restore_default_font_signal("documentfont_default");
+                    statusImage.visible = true;
                 }
             }
         }
