@@ -4,8 +4,10 @@ youker-assistant (0.2.3-0ubuntu1) saucy; urgency=low
   * Add Google Chromium Cookies cleaner.
   * Change Chinese to English add add translation.
   * Adjust components space after it added translation.
+  * Solve the segmentation fault when users cancel the previous Fcitx configuration(LP: #1252595).
+  * Save and restore the default system configuration with QSetting.
 
- -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Tue, 19 Nov 2013 11:36:37 +0800
+ -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Wed, 20 Nov 2013 09:37:52 +0800
 
 youker-assistant (0.2.2-0ubuntu1) saucy; urgency=low
 
